[Image Widget] fix image alignment for Hack for themes that set img as a display block

--- a/assets/css/frontend-rtl.css
+++ b/assets/css/frontend-rtl.css
@@ -572,7 +572,8 @@
 .elementor-widget-image .elementor-image figure > a {
   display: inline-block; }
 .elementor-widget-image .elementor-image img {
-  vertical-align: middle; }
+  vertical-align: middle;
+  display: inline-block; }
 .elementor-widget-image .elementor-image.elementor-image-shape-circle {
   border-radius: 50%; }
 
